# NPField

./: README.md  create_solver.py  model_nn.py  robot_model.py  test_solver.py
ROS_Implementation/: CMakeLists.txt  ReadMe.md  package.xml
ROS_Implementation/include/: MPC_Planner.h  ROS_Node.h  lib.h  types.h
ROS_Implementation/launch/: node.launch
ROS_Implementation/scripts/: ReadMe.md  embeding_for_map_and_footprint.py
ROS_Implementation/src/: MPC_Planner.cpp  main.cpp  main_without_tf.cpp
mpc_l4c_10cm/: create_solver.py  model_nn.py  test_solver.py
mpc_l4c_2cm/: create_solver.py  model_nn.py  robot_model.py  test_solver.py
